--- a/contacts/index.html
+++ b/contacts/index.html
@@ -21,6 +21,18 @@
 
       </div>
     </nav>
+
+    <div class="mobile-nav">
+      <div class="logo-page">
+        <a id="home-link" href="../index.html">  <img id="profile-photo" src="../assets/img/profile-photo-contact.png" alt="">Piermario Persico</a>
+      </div>
+      <div class="page-link">
+        <a class="mobile-link bio" href="../bio/index.html">Chi Sono</a>
+        <a class="mobile-link portfolio" href="../portfolio/index.html">Portfolio</a>
+        <a class="mobile-link contacts" href="../contacts/index.html">Contatti</a>
+      </div>
+    </div>
+
     <main>
 
 
@@ -38,9 +50,9 @@
          </section>
          <section class="contacts-section">
               <h3>Potete inviarmi una email a:</h3>
-              <a class="email-number" href="#">piermariopersico@gmail.com</a>
+              <a class="email-number" href="mailto:piermariopersico@gmail.com">piermariopersico@gmail.com</a>
               <h3>o chiamarmi al numero</h3>
-              <a class="email-number" href="#">3335005832</a>
+              <a class="email-number" href="tel:+393343117523">3343117523</a>
          </section>
 
       <section class="contacts-section">
@@ -67,11 +79,11 @@
     </main>
 
     <footer>
-      <a href="#home-link">Torna all'inizio</a>
+      <a href="../contacts/index.html">Torna all'inizio</a>
       <a href="../index.html">Torna alla Home</a>
       <a href="../bio/index.html">Chi Sono</a>
       <a href="../portfolio/index.html">Portfolio</a>
-      <a href="#">Contatti</a>
+      <a href="../contacts/index.html">Contatti</a>
       <p>  &#169; Piermario Persico 2022</p>
     </footer>
 
