--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/img/profile-photo-about.png">
-    <title>Start2Impact - Portfolio</title>
+    <title>Piermario Persico - Portfolio</title>
   </head>
   <body>
     <main>
