--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,6 +20,19 @@
 
       </div>
     </nav>
+
+    <div class="mobile-nav">
+      <div class="logo-page">
+        <a id="home-link" href="../index.html">  <img id="profile-photo" src="../assets/img/profile-photo-portfolio.png" alt="">Piermario Persico</a>
+      </div>
+      <div class="page-link">
+        <a class="mobile-link bio" href="../bio/index.html">Chi Sono</a>
+        <a class="mobile-link portfolio" href="../portfolio/index.html">Portfolio</a>
+        <a class="mobile-link contacts" href="../contacts/index.html">Contatti</a>
+      </div>
+    </div>
+
+
     <main>
 
       <section id="works-section">
@@ -62,7 +75,7 @@
       </a>
       </section>
       <footer>
-        <a href="#home-link">Torna all'inizio</a>
+        <a href="../portfolio/index.html">Torna all'inizio</a>
         <a href="../index.html">Torna alla Home</a>
         <a href="../bio/index.html">Chi Sono</a>
         <a href="../portfolio/index.html">Portfolio</a>
