--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@
 
       <section id="works-section">
         <h1>I MIEI LAVORI</h1>
-        <h2> Questa sezione è ancora vuota purtroppo&#128546;	</h1>
+        <h2> Questa sezione è ancora in allestimento purtroppo&#128546;	</h1>
         <h3>	&#8595; Ma puoi sempre visualizzare le esercitazioni che ho svolto qui sotto	&#8595;</h3>
 
       </section>
