--- a/index.html
+++ b/index.html
@@ -9,42 +9,45 @@
     <title>Piermario Persico - Portfolio</title>
   </head>
   <body>
+
     <main>
-    <!-- titolo iniziale -->
+
+      <!-- titolo iniziale -->
       <div id="title-section">
         <p class="font-classic"><em>Ciao, sono</em></p>
         <h1 id="title">Piermario Persico</h1>
         <p class="font-classic"><em>Web Developer, ma anche Musicista!</em></p>
-        </div>
+      </div>
 
 
       <div id="scroll-adv">
         <h1>&#8595; Scorri e scopri tutto di me &#8595;</h1>
       </div>
-    <!-- sezione principale del sito -->
+
+      <!-- sezione principale del sito -->
       <div id="main-content">
 
-      <div class="box one">
-        <h1>Chi Sono</h1>
-        <div class="font-classic">Scopri la mia storia, le mie passioni <br> e sopratutto le mie <em> Skills</em></div>
-        <a class="box-link one" href="bio/index.html">Scopri di più</a>
+        <div class="box one">
+          <h1>Chi Sono</h1>
+          <div class="font-classic">Scopri la mia storia, le mie passioni <br> e sopratutto le mie <em> Skills</em></div>
+          <a class="box-link one" href="bio/index.html">Scopri di più</a>
+        </div>
+        <div class="box two">
+          <h1>Portfolio</h1>
+          <div class="font-classic">Scopri tutti i progetti a cui ho lavorato <br><em>(per ora)</em> </div>
+          <a class="box-link two" href="portfolio/index.html">Scopri di più</a>
+        </div>
+        <div class="box three">
+          <h1>Contatti</h1>
+          <div class="font-classic">Tutti i modi in cui potete contattarmi! <br> <em>(cosa aspetti?)</em> </div>
+          <a class="box-link three" href="contacts/index.html">Scopri di più</a>
+        </div>
       </div>
-      <div class="box two">
-        <h1>Portfolio</h1>
-        <div class="font-classic">Scopri tutti i progetti a cui ho lavorato <br><em>(per ora)</em> </div>
-        <a class="box-link two" href="portfolio/index.html">Scopri di più</a>
-      </div>
-      <div class="box three">
-        <h1>Contatti</h1>
-        <div class="font-classic">Tutti i modi in cui potete contattarmi! <br> <em>(cosa aspetti?)</em> </div>
-        <a class="box-link three" href="contacts/index.html">Scopri di più</a>
-      </div>
-    </div>
 
     <!-- footer -->
-    <div >
-        &#169; Piermario Persico 2022
-    </div>
+      <div>
+        <p>&#169; Piermario Persico 2022</p>
+      </div>
     </main>
 
 
