--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
         <div class="box one">
           <h1>Chi Sono</h1>
           <div class="font-classic">Scopri la mia storia, le mie passioni <br> e sopratutto le mie <em> Skills</em></div>
-          <a class="box-link one" href="bio/index.html">Scopri di più</a>
+          <a class="box-link one" href="bio/">Scopri di più</a>
         </div>
         <div class="box two">
           <h1>Portfolio</h1>
           <div class="font-classic">Scopri tutti i progetti a cui ho lavorato <br><em>(per ora)</em> </div>
-          <a class="box-link two" href="portfolio/index.html">Scopri di più</a>
+          <a class="box-link two" href="portfolio/">Scopri di più</a>
         </div>
         <div class="box three">
           <h1>Contatti</h1>
           <div class="font-classic">Tutti i modi in cui potete contattarmi! <br> <em>(cosa aspetti?)</em> </div>
-          <a class="box-link three" href="contacts/index.html">Scopri di più</a>
+          <a class="box-link three" href="contacts/">Scopri di più</a>
         </div>
       </div>
 
