--- a/contacts/index.html
+++ b/contacts/index.html
@@ -12,12 +12,12 @@
   <body>
     <nav>
       <div class="logo-page">
-        <a id="home-link" href="../index.html">  <img id="profile-photo" src="../assets/img/profile-photo-contact.png" alt="">Piermario Persico</a>
+        <a id="home-link" href="../">  <img id="profile-photo" src="../assets/img/profile-photo-contact.png" alt="">Piermario Persico</a>
       </div>
       <div class="page-link">
-        <a class="nav-link bio" href="../bio/index.html">Chi Sono</a>
-        <a class="nav-link portfolio" href="../portfolio/index.html">Portfolio</a>
-        <a class="nav-link contacts" href="#">Contatti</a>
+        <a class="nav-link bio" href="../bio/">Chi Sono</a>
+        <a class="nav-link portfolio" href="../portfolio/">Portfolio</a>
+        <a class="nav-link contacts" href="../contacts/">Contatti</a>
 
       </div>
     </nav>
@@ -27,9 +27,9 @@
         <a id="home-link" href="../index.html">  <img id="profile-photo" src="../assets/img/profile-photo-contact.png" alt="">Piermario Persico</a>
       </div>
       <div class="page-link">
-        <a class="mobile-link bio" href="../bio/index.html">Chi Sono</a>
-        <a class="mobile-link portfolio" href="../portfolio/index.html">Portfolio</a>
-        <a class="mobile-link contacts" href="../contacts/index.html">Contatti</a>
+        <a class="mobile-link bio" href="../bio/">Chi Sono</a>
+        <a class="mobile-link portfolio" href="../portfolio/">Portfolio</a>
+        <a class="mobile-link contacts" href="../contacts/">Contatti</a>
       </div>
     </div>
 
@@ -79,11 +79,11 @@
     </main>
 
     <footer>
-      <a href="../contacts/index.html">Torna all'inizio</a>
-      <a href="../index.html">Torna alla Home</a>
-      <a href="../bio/index.html">Chi Sono</a>
-      <a href="../portfolio/index.html">Portfolio</a>
-      <a href="../contacts/index.html">Contatti</a>
+      <a href="../contacts/">Torna all'inizio</a>
+      <a href="../">Torna alla Home</a>
+      <a href="../bio/">Chi Sono</a>
+      <a href="../portfolio/">Portfolio</a>
+      <a href="../contacts/">Contatti</a>
       <p>  &#169; Piermario Persico 2022</p>
     </footer>
 
