--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,24 +11,24 @@
   <body>
     <nav>
       <div class="logo-page">
-        <a id="home-link" href="../index.html">  <img id="profile-photo" src="../assets/img/profile-photo-portfolio.png" alt="">Piermario Persico</a>
+        <a id="home-link" href="../">  <img id="profile-photo" src="../assets/img/profile-photo-portfolio.png" alt="">Piermario Persico</a>
       </div>
       <div class="page-link">
-        <a class="nav-link bio" href="../bio/index.html">Chi Sono</a>
-        <a class="nav-link portfolio" href="../portfolio/index.html">Portfolio</a>
-        <a class="nav-link contacts" href="../contacts/index.html">Contatti</a>
+        <a class="nav-link bio" href="../bio/">Chi Sono</a>
+        <a class="nav-link portfolio" href="../portfolio/">Portfolio</a>
+        <a class="nav-link contacts" href="../contacts/">Contatti</a>
 
       </div>
     </nav>
 
     <div class="mobile-nav">
       <div class="logo-page">
-        <a id="home-link" href="../index.html">  <img id="profile-photo" src="../assets/img/profile-photo-portfolio.png" alt="">Piermario Persico</a>
+        <a id="home-link" href="../">  <img id="profile-photo" src="../assets/img/profile-photo-portfolio.png" alt="">Piermario Persico</a>
       </div>
       <div class="page-link">
-        <a class="mobile-link bio" href="../bio/index.html">Chi Sono</a>
-        <a class="mobile-link portfolio" href="../portfolio/index.html">Portfolio</a>
-        <a class="mobile-link contacts" href="../contacts/index.html">Contatti</a>
+        <a class="mobile-link bio" href="../bio/">Chi Sono</a>
+        <a class="mobile-link portfolio" href="../portfolio/">Portfolio</a>
+        <a class="mobile-link contacts" href="../contacts/">Contatti</a>
       </div>
     </div>
 
@@ -46,26 +46,26 @@
         <h1> LE MIE ESERCITAZIONI</h1>
         <h2>Qua trovi tutte le esercitazioni che ho svolto durante i miei studi di programmazione web!</h3>
 
-        <a class="box-work one" href="tribute-page/index.html" target="_blank">
+        <a class="box-work one" href="tribute-page/" target="_blank">
          <div class="box-explanation">
            <h1>Tribute Page</h1>
            <p>Questa esercitazione consisteva nel riprodurre una pagina in memoria di una persona.</p>
         </div>
         </a>
-        <a class="box-work two" href="survey-form/index.html" target="_blank">
+        <a class="box-work two" href="survey-form/" target="_blank">
           <div class="box-explanation" >
           <h1>Survey Form</h1>
           <p>Questa esercitazione consisteva nel riprodurre il form di un sito dove l'utente poteva inserire i propri dati.</p>
         </div>
         </a>
-        <a class="box-work three" href="product-landing-page/index.html" target="_blank">
+        <a class="box-work three" href="product-landing-page/" target="_blank">
           <div class="box-explanation">
           <h1>Product Landing Page</h1>
           <p>Questa esercitazione consisteva nel riprodurre un sito di una azienda.Nel sito vi doveva essere una breve presentazione dei prodotti e la possibilità di venderli.</p>
 
         </div>
         </a>
-        <a class="box-work four" href="personal-portfolio/index.html" target="_blank">
+        <a class="box-work four" href="personal-portfolio/" target="_blank">
           <div class="box-explanation">
           <h1>Personal Portfolio</h1>
           <p>Questa esercitazione consisteva nel creare il nostro primo portfolio. Nel sito bisognava inserire la propria biografia, i propri lavori e i contatti.</p>
@@ -74,11 +74,11 @@
       </a>
       </section>
       <footer>
-        <a href="../portfolio/index.html">Torna all'inizio</a>
-        <a href="../index.html">Torna alla Home</a>
-        <a href="../bio/index.html">Chi Sono</a>
-        <a href="../portfolio/index.html">Portfolio</a>
-        <a href="../contacts/index.html">Contatti</a>
+        <a href="../portfolio/">Torna all'inizio</a>
+        <a href="../">Torna alla Home</a>
+        <a href="../bio/">Chi Sono</a>
+        <a href="../portfolio/">Portfolio</a>
+        <a href="../contacts/">Contatti</a>
         <p>  &#169; Piermario Persico 2022</p>
       </footer>
 
