--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,7 +20,7 @@
 
       </div>
     </nav>
-
+    <!-- menù di navigazione mobile -->
     <div class="mobile-nav">
       <div class="logo-page">
         <a id="home-link" href="../">  <img id="profile-photo" src="../assets/img/profile-photo-portfolio.png" alt="">Piermario Persico</a>
