--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,9 +37,14 @@
 
       <section id="works-section">
         <h1>I MIEI LAVORI</h1>
-        <h2> Questa sezione è ancora in allestimento purtroppo &#128546;	</h1>
-        <h3>	&#8595; Ma puoi sempre visualizzare le esercitazioni che ho svolto qui sotto	&#8595;</h3>
+        <h2>	&#8595; Ma puoi sempre visualizzare le esercitazioni che ho svolto qui sotto	&#8595;</h3>
 
+          <a class="box-work five" href="https://piermariopersico.github.io/Arcade-Games/" target="_blank">
+           <div class="box-explanation">
+             <h1>Piermario's Arcade Games</h1>
+             <p>Una raccolta di giochi arcade realizzati interamente in HTML CSS e JAVASCRIPT.</p>
+          </div>
+          </a>
       </section>
 
       <section id="exercises-section">
